# OmniViral

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
backend/: __init__.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  dashboard.py  forecast.py  ingest.py  metrics.py  optimize.py  predict.py  publish.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  agent_log.py  asset.py  forecast.py  model_metric.py  prediction.py  publication.py
backend/app/schemas/: asset.py  prediction.py
backend/app/tasks/: agent_tasks.py  ingestion_tasks.py  prediction_tasks.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
kubernetes/: backend-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml
monitoring/grafana/provisioning/datasources/: prometheus.json
monitoring/prometheus/: prometheus.yml
