[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omniviral"
version = "1.0.0"
description = "Autonomous Multi-Modal Predictive Content Lifecycle Forecaster & Agentic Creative Optimization Engine"
authors = [{ name = "OmniViral Team" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"
keywords = ["ai", "content", "prediction", "forecasting", "agents", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/omniviral/omniviral"
Repository = "https://github.com/omniviral/omniviral"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=backend --cov=ml_pipeline --cov=agents --cov-report=term-missing --cov-report=html:htmlcov"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N815"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"alembic/*" = ["INP001"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend", "ml_pipeline", "agents"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
